/*
 * Copyright 2019 Johns Hopkins University
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * Developed by: Roberts Group
 *               Johns Hopkins University
 *               http://biophysics.jhu.edu/roberts/
 *
 * Author(s): Elijah Roberts
 */

syntax = "proto2";
package lm.input;

import "robertslab/pbuf/NDArray.proto";

message CMERestart {
    required robertslab.pbuf.NDArray restart_trajectory_ids     = 1;        //1D; rows=trajectories; type=uint64
    required robertslab.pbuf.NDArray restart_times              = 2;        //1D; rows=trajectories; type=double
    required robertslab.pbuf.NDArray restart_species_counts     = 3;        //2D; rows=trajectories,cols=species; type=int32
}
